@@ -18,6 +18,11 @@ Version 7.1  [ TODO ]
               form [1], not [-1].
         Class IntersectionForm:
             - New class to compute invariants of intersection forms.
+        Class Isomorphism:
+            - Replaced apply() with the bracket operator.  The old apply()
+              is now a deprecated alias.
+            - Deprecated applyInPlace(), since this is no faster than
+              calling tri = iso(tri).
         Class Matrix:
             - Routine det() now throws an exception if the matrix is not
               square (this is a precondition), and now returns 1 if the
